# Co-AI-Scientist

./: .gitignore  README.md  achievement_manager.py  app.py  config.py  crew_setup.py  fix_git_state.py  hypothesis_manager.py  knowledge_base.py  main.py  memory_optimized_start.sh  models.py  paper_generator.py  push_to_github_clean.sh  push_with_pull.sh  pyproject.toml  research_sessions.db  server.py  start.sh  start_with_long_timeout.sh  web_scraper.py
agents/: __init__.py  analyst.py  base.py  evaluator.py  evolution_agent.py  generation_agent.py  inventor.py  meta_review_agent.py  proximity_check_agent.py  ranking_agent.py  refiner.py  reflection_agent.py  researcher.py  supervisor.py
attached_assets/: Pasted--2025-03-28-20-58-49-0000-11131-INFO-Starting-gunicorn-23-0-0-2025-03-28-20-58-49-0000-111-1743195810596.txt  Pasted-1-Product-Overview-and-Objectives-Product-Name-Autonomous-AI-Co-Scientist-Learning-Research-Assi-1743186498670.txt  Pasted-Agents-Detailed-guide-on-creating-and-managing-agents-within-the-CrewAI-framework-Overview-of-an--1743192149351.txt  Pasted-Agents-Detailed-guide-on-creating-and-managing-agents-within-the-CrewAI-framework-Overview-of-an-1743192785362.txt  Pasted-Core-Concepts-Collaboration-Exploring-the-dynamics-of-agent-collaboration-within-the-CrewAI-framewo-1743196374074.txt  Pasted-Core-Concepts-Processes-Detailed-guide-on-workflow-management-through-processes-in-CrewAI-with-upd-1743193864552.txt  Pasted-Step-by-Step-Workflow-The-Inventor-Agent-system-operates-in-iterative-phases-from-receiving-a-prob-1743189089237.txt  (+4 more)
(+12 files in other folders)
